# aisa-docs-voyager

./: .gitignore  LICENSE  README.md  STRATEGY.zh-CN.md  WRITING-STANDARD.zh-CN.md  accept_all.py  build_index.py  check_projection.py  project_spec.py  pyproject.toml
.github/workflows/: deploy-api-site.yml  doc-reality-check.yml
aisa_doc_auditor/: __init__.py  auditor.py
archive/: README.md  ROADMAP.zh-CN.md  STRATEGY.zh-CN.md
checks/: .gitkeep  README.md  src_consistency.py
docs-mirror/: agent-skills.md  api-reference.md  guides.md  manifest.json
localized/: quickstart.zh-CN.md
planning/: PHASE-1-hard-defects.zh-CN.md  PHASE-2-ai-friendly.zh-CN.md  PHASE-3-openapi-enhance.zh-CN.md  PHASE-4-report-aggregation.zh-CN.md  PHASE-5-scalar-api-site.zh-CN.md  ROADMAP.zh-CN.md
project/: ASSETS.zh-CN.md  CHARTER.md  DECISIONS.md  HANDOVER.md  REPORT-CONTRACT.zh-CN.md  STATE.md
reports/: ai-friendly-guides-2026-06-26.md  ai-friendly-method.zh-CN.md  ai-friendly-prose-2026-06-26.md  ai-friendly-prose-readable-2026-06-26.md  annotations-for-dev-2026-06-26.csv  annotations-for-dev-2026-06-26.md  api-enhance-2026-06-28.md  api-writing-patterns-2026-06-26.md  content-audit-2026-06-26.md  hard-defects-2026-06-26.json  hard-defects-2026-06-26.md  openapi-enhance-pilot-2026-06-26.md  openapi-enhance-v2-2026-06-26.md  scalar-api-site-2026-06-26.md
site/: ai-friendly.html  index.html  site_ai-friendly.html
tests/: test_accept_all.py  test_central_accept_paths.py
tools/: docs_mirror.py
ws-v2/: central_accept.py  dump_pairs.py  extract_annotations.py  find_examples.py
(+1115 files in other folders)
