[project]
name = "aisa-docs-voyager"
version = "1.0.0"
description = "Foresight: a drift-detection agent that keeps AIsa's developer docs honest against the live machine contract."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIsa Docs Voyager contributors" }]
keywords = ["aisa", "documentation", "drift-detection", "developer-relations", "llms-txt", "agent"]
dependencies = []

[project.scripts]
aisa-docs-voyager = "aisa_doc_auditor.auditor:main"

[project.urls]
Homepage = "https://github.com/yuanshan8053/aisa-docs-voyager"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aisa_doc_auditor"]
